# trading-bot

./: .gitignore  Cargo.toml  Config.toml  Dockerfile  README.md  azure-pipelines.yml  bootstrap.toml  checkstyle.xml  config.toml  docker-compose.yml  pom.xml
sql/: ddl.sql
src/: calculate.rs  config.rs  currency.rs  currency_ctrl.rs  currency_svc.rs  debt.rs  debt_svc.rs  exchange.rs  holiday.rs  holiday_api.rs  holiday_ctrl.rs  holiday_svc.rs  initializer.rs  jobs.rs  lib.rs  listener.rs  main.rs  request.rs  server.rs  stock.rs  stock_analysis_ctrl.rs  stock_analysis_svc.rs  stock_api.rs  stock_ctrl.rs  stock_data.rs  stock_index.rs  stock_index_api.rs  stock_index_ctrl.rs  stock_index_svc.rs  stock_pattern.rs  stock_router.rs  stock_svc.rs
src/analysis/: analysis_ctrl.rs  analysis_model.rs  analysis_svc.rs  mod.rs  stock_analysis_ctrl.rs  stock_analysis_model.rs  stock_analysis_svc.rs  stock_calculate.rs  stock_pattern.rs
src/currency/: currency_ctrl.rs  mod.rs
src/debt/: debt_ctrl.rs  debt_model.rs  debt_svc.rs  mod.rs
src/exchange/: exchange_ctrl.rs  exchange_model.rs  exchange_svc.rs  mod.rs
src/fund/: fund_api.rs  fund_ctrl.rs  fund_model.rs  mod.rs
src/holiday/: holiday_ctrl.rs  holiday_model.rs  holiday_svc.rs  mod.rs
src/index/: index_api.rs  index_constituent_model.rs  index_ctrl.rs  index_model.rs  index_svc.rs  mod.rs  stock_index.rs  stock_index_api.rs  stock_index_ctrl.rs  stock_index_model.rs  stock_index_svc.rs
src/job/: jobs.rs
src/main/java/com/github/caijh/apps/trading/bot/: TradingBotApplication.java
src/main/java/com/github/caijh/apps/trading/bot/config/: DisruptorConfig.java  FeignConfig.java
src/main/java/com/github/caijh/apps/trading/bot/consumer/: TradingStrategyConsumer.java  TradingStrategyConsumerImpl.java  TradingStrategyEventHandler.java
src/main/java/com/github/caijh/apps/trading/bot/dto/: ApiResponse.java  Notification.java  StockPrice.java  TradingEventMessage.java
src/main/java/com/github/caijh/apps/trading/bot/entity/: Account.java  Holdings.java  TradingRecord.java  TradingStrategy.java
src/main/java/com/github/caijh/apps/trading/bot/enums/: Exchange.java
src/main/java/com/github/caijh/apps/trading/bot/factory/: TradingEventFactory.java
src/main/java/com/github/caijh/apps/trading/bot/feign/: MessageFeignClient.java  TradingDataFeign.java  TradingDataFeignClient.java
src/main/java/com/github/caijh/apps/trading/bot/produce/: TradingStrategyProducer.java  TradingStrategyProducerImpl.java
src/main/java/com/github/caijh/apps/trading/bot/repository/: AccountRepository.java  HoldingsRepository.java  TradingRecordRepository.java  TradingStrategyRepository.java
src/main/java/com/github/caijh/apps/trading/bot/service/: AccountService.java  HoldingsService.java  NotificationService.java  TradingRecordService.java  TradingStrategyService.java
src/main/java/com/github/caijh/apps/trading/bot/service/impl/: AccountServiceImpl.java  HoldingsServiceImpl.java  NotificationServiceImpl.java  TradingRecordServiceImpl.java  TradingStrategyServiceImpl.java
src/main/resources/: application.properties  application.yml  bootstrap.yml
src/stock/: mod.rs  stock_api.rs  stock_ctrl.rs  stock_model.rs  stock_price_model.rs  stock_svc.rs
src/test/java/com/github/caijh/apps/trading/bot/: TradingBotApplicationTests.java
src/token/: mod.rs  token_svc.rs
tests/: chrono_tests.rs  excel_tests.rs  holiday_tests.rs  polars_tests.rs  stock_pattern_tests.rs
