[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application-beans = { git = "https://github.com/caijh/application-rs.git" }
application-core = { git = "https://github.com/caijh/application-rs.git" }
application-context = { git = "https://github.com/caijh/application-rs.git" }
application-web = { git = "https://github.com/caijh/application-rs.git" }
application-web-macros = { git = "https://github.com/caijh/application-rs.git" }
application-web-actuator = { git = "https://github.com/caijh/application-rs.git" }
application-schedule = { git = "https://github.com/caijh/application-rs.git" }
application-cache = { git = "https://github.com/caijh/application-rs.git" }
application-boot = { git = "https://github.com/caijh/application-rs.git" }

# cli
#clap = { version = "4.5.18", features = ["cargo", "derive"] }
#cli = {git = "https://caijh@bitbucket.org/bytebinary/cli-rs.git"}
# log
#logger = {git = "https://caijh@bitbucket.org/bytebinary/logger-rs.git"}
tracing = "0.1.40"
#tracing-core = "0.1.32"
#tracing-log = "0.2.0"
#tracing-appender = "0.2.3"
#tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# database
database-common = { git = "https://github.com/caijh/application-rs.git" }
database-mysql-seaorm = { git = "https://github.com/caijh/application-rs.git" }
sea-orm = { version = "1.0.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "with-bigdecimal", "with-uuid", "with-json", "with-chrono", "with-time"] }

# redis
redis = { version = "0.24.0", features = ["tls-native-tls"] }
redis-io = { git = "https://caijh@bitbucket.org/bytebinary/redis-io-rs.git" }

# web
async-trait = "0.1.82"
axum = "0.7.6"
# util
util = { git = "https://caijh@bitbucket.org/bytebinary/util-rs.git"}

#
#state = "0.6.0"
reqwest = { version = "0.12.7", features = ["cookies", "blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
chrono = "0.4"
rand = "0.8.5"
calamine = "0.26.1"
bigdecimal = "0.4.5"
polars = { version = "0.43.1", features = ["json", "lazy"] }
chrono-tz = "0.10.0"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
notification = { git = "https://caijh@bitbucket.org/bytebinary/notification-rs.git" }
tempfile = "3.12.0"
uuid = { version = "1.10.0", features = ["std", "v4"] }
regex = "1.11.1"
lazy_static = "1.5.0"

[features]
default = ["signal"]
signal = ["tokio-cron-scheduler/signal"]
